# oracle2postgres-schema-validator

./: README.md  database_comparison_report_20241010_140905.html  ora_user_grants.sql  pyproject.toml  requirements.txt
collector/oracle-collector/: collect_data.sh
collector/pg-collector/: collect_pgsql.py  config.yaml  dbobjectnames.csv  dbobjectnames.sql  sourcecode_detailed.csv  tabcolumns.csv  views.csv
importer/: create_pg_user.sql  importer.py  readme.txt
importer/extracts/: opdb__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624_version.txt  opdb__columns__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.csv  opdb__dbobjectnames__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.csv  opdb__defines__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.csv  opdb__eoj__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.csv  opdb__indexes__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.csv  opdb__instances__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.csv  opdb__manifest__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.txt  opdb__sourcecodedetailed__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.csv  opdb__tableconstraints__190_4.3.34_instance-1_NOK19ORC_nok19orcl_061324082624.csv  pgdb__columns__data.csv  pgdb__dbobjectnames__data.csv  (+4 more)
reporter/: README.txt  database_comparison_report_20240613_114641.html  database_comparison_report_20240613_115938.html  database_comparison_report_20240613_132540.html  database_comparison_report_20240613_181713.html  generate_report.py  query_config.yaml  reporter.py
(+80 files in other folders)
